fix: stabilize ymvid inline WebHome playback